--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <hr class="featurette-divider">
 
 
-      <a href="https://wa.me/11947332516" class="whatsapp-button" target="_blank"
+      <a href="https://wa.me/+5511947332516" class="whatsapp-button" target="_blank"
         style="position: fixed;  right: 15px; bottom: 15px;">
         <img src="https://i.ibb.co/VgSspjY/whatsapp-button.png" alt="botão whatsapp">
       </a>
