--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/logo centro X.png" class="logo" alt="Logo"></a>
+        <a class="navbar-brand" href="#"><img src="img/Logo da x bus 1 (1).png" class="logo" alt="Logo X bus movel"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,9 @@
               <a class="nav-link" href="#contatos">Localização</a>
             </li>
             <li class="nav-item">
+              <!--
               <a class="nav-link" href="#valores">Valores</a>
+            -->
             </li>
           </ul>
 
@@ -129,16 +131,16 @@
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false" alt="">
 
           <h2>CURSOS PROFISSIONALIZANTES</h2>
-          <p>Curso de Inglês iniciante
+          <p>Curso de Inglês iniciante,
             Curso de Espanhol
-            iniciante
+            iniciante,
             Curso de Criação de
-            Games
-            Curso de YouTuber
-            Curso de digital influencer
+            Games,
+            Curso de YouTuber,
+            Curso de digital influencer,
             Curso de produção de
-            vídeos
-            Preparatório para o Enem
+            vídeos,
+            Preparatório para o Enem,
             ESSES CURSOS SÃO
             AULAS
             PRESENCIAIS E ONLINE</p>
@@ -169,9 +171,8 @@
             aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false" alt="">
 
           <h2>E muito mais</h2>
-          <p>ALÉM DESSES TEMOS MAIS DE
-            200 CURSOS DE ACORDO COM
-            NOSSO CATÁLOGO
+          <p>Além desses temos mais de
+            200 cursos de acordo com nosso catálogo. 
           </p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -227,7 +228,7 @@
       </div>
 
       <hr class="featurette-divider">
-
+<!--
       <div class="row featurette" id="valores">
         <div class="col-md-7">
           <h2 class="featurette-heading">PARCERIAS E
@@ -269,8 +270,7 @@
 
       <hr class="featurette-divider">
 
-      <!-- /END THE FEATURETTES -->
-
+          -->>
     </div><!-- /.container -->
 
     <div class="container marketing" id="contatos">
@@ -302,7 +302,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Voltar ao topo</a></p>
-        <p>&copy; 2022 Centro X bus móvel, Inc. </p>
+        <p>&copy; 2022 Centro X bus móvel, Inc. Desenvolvido por Trindade Divulgações </p>
       </footer>
   </main>
 
