--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/Logo da x bus 1 (1).png" class="logo" alt="Logo X bus movel"></a>
+      <div class="container">
+        <a class="navbar-brand" href="#"><img src="img/Logo da x bus 1 (1).png" width="15%" height="10%" class="logo"
+            alt="Logo X bus movel"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,6 +58,7 @@
               <a class="nav-link" href="#contatos">Localização</a>
             </li>
             <li class="nav-item">
+              <a href=""></a>
               <!--
               <a class="nav-link" href="#valores">Valores</a>
             -->
@@ -68,62 +70,36 @@
     </nav>
   </header>
 
+  <div class="container p-5 m-5">
+
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" width="760" height="420" src="https://www.youtube.com/embed/cf-tXe8q6r0"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </div>
+  </div>
+
   <main>
-
-    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
-          aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div class="container">
+      <div class="carousel-caption text-end">
+        <h1 class="fonteCarrossel">Cursos Para todas as Faixa Etárias de idade </h1>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/onibus branco com luz.jpeg" alt="">
-
-          <div class="container">
-            <div class="carousel-caption text-end">
-              <h1 class="fonteCarrossel">Apresentamos a vocês</h1>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/sala.jpeg" alt="">
-
-          <div class="container">
-            <div class="carousel-caption">
-              <h1 class="fonteCarrossel">Centro X bus Móvel</h1>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/WhatsApp Image 2022-08-08 at 09.16.02 (1).jpeg" alt="">
-          <!--
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-        -->
-          <div class="container">
-            <div class="carousel-caption text-end">
-              <h1 class="fonteCarrossel">Cursos Para todas as Faixa Etárias de idade </h1>
-            </div>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
 
-
-
+    </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    </div>
 
     <div class="container marketing">
-
-      <!-- Three columns of text below the carousel -->
       <div class="row">
 
         <div class="col-lg-4">
@@ -172,7 +148,7 @@
 
           <h2>E muito mais</h2>
           <p>Além desses temos mais de
-            200 cursos de acordo com nosso catálogo. 
+            200 cursos de acordo com nosso catálogo.
           </p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
@@ -228,7 +204,7 @@
       </div>
 
       <hr class="featurette-divider">
-<!--
+      <!--
       <div class="row featurette" id="valores">
         <div class="col-md-7">
           <h2 class="featurette-heading">PARCERIAS E
