--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="img/Logo da x bus 1 (1).png" width="15%" height="10%" class="logo"
+        <a class="navbar-brand" href="#"><img src="img/Logo da x bus 1 (1).png" width="50" height="50" class="logo"
             alt="Logo X bus movel"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,16 +69,9 @@
       </div>
     </nav>
   </header>
-
-  <div class="container p-5 m-5">
-
-    <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" width="760" height="420" src="https://www.youtube.com/embed/cf-tXe8q6r0"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-    </div>
-  </div>
+  
+    <iframe class="p-3 m-3" src="https://www.youtube.com/embed/cf-tXe8q6r0" width="640" height="360" frameborder="0"
+      allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 
   <main>
     <div class="container">
