--- a/index.html
+++ b/index.html
@@ -69,9 +69,18 @@
       </div>
     </nav>
   </header>
-  
-    <iframe class="p-3 m-3" src="https://www.youtube.com/embed/cf-tXe8q6r0" width="640" height="360" frameborder="0"
-      allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+  <hr>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <iframe class="p-3 m-3" src="https://www.youtube.com/embed/cf-tXe8q6r0" width="640" height="315" frameborder="0"
+          allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+
+
+  <hr>
 
   <main>
     <div class="container">
@@ -190,44 +199,21 @@
             teóricas e práticas</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img src="img/sala.jpeg" class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
-            width="500" height="500" alt="" role="img" aria-label="Placeholder: 500x500"
+          <img src="img/Como fuciona.jpeg"  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+            width="100%" height="100%" alt="" role="img" aria-label="Placeholder: 500x500"
             preserveAspectRatio="xMidYMid slice" focusable="false">
         </div>
       </div>
 
       <hr class="featurette-divider">
-      <!--
+    
       <div class="row featurette" id="valores">
+        <h2 class="featurette-heading">Para parcerias</h2>
         <div class="col-md-7">
-          <h2 class="featurette-heading">PARCERIAS E
-            VALORES</h2>
-          <p class="lead">Centro X tem um programa
-            especial de parceria com outras
-            instituições, levando o ônibus e
-            os cursos com valores especiais.
-            Qualquer um desses cursos
-            relacionado tem um valor
-            único de <span class="valor">R$ 199,00</span> por aluno.
-            Esse valor é somente para
-            grupos de 50 alunos ou mais no
-            mesmo dia de atendimento.
-            (Esse valor é apenas de São
-            Paulo capital até 60 km de
-            distância do centro de São
-            Paulo, caso seja mais distante
-            terá reajuste Toda formação e a entrega da
-            certificação fica por conta da nossa
-            empresa.
-            Passamos o relatório a instituição
-            parceira do número de alunos e
-            formados conforme cronograma do
-            curso.</p>
+          <p class="lead"></p>
         </div>
         <div class="col-md-5">
-          <img src="img/onibus duo 2.jpeg"
-            class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
-            alt="" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <img src="img/Parcerias.jpeg" width="100%" height="100%" alt="">
 
 
           <title>Placeholder</title>
@@ -239,7 +225,7 @@
 
       <hr class="featurette-divider">
 
-          -->>
+         
     </div><!-- /.container -->
 
     <div class="container marketing" id="contatos">
