--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Voltar ao topo</a></p>
-        <p>&copy; 2022 Centro X bus móvel, Inc. Desenvolvido por Trindade Divulgações </p>
+        <p>&copy; 2022 Centro X bus móvel, Inc. Desenvolvido por Trindade Comunicação Visual </p>
       </footer>
   </main>
 
