--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Voltar ao topo</a></p>
-        <p>&copy; 2022 Centro X bus móvel, Inc. Desenvolvido por Trindade Comunicação Visual </p>
+        <p>&copy; 2022 Centro X bus móvel - <a href="https://wa.me/+5511998079811" class="whatsapp-button" onmouseover="this.style.color='#cccc'"  onMouseOut="this.style.color='#000'"target="_blank" style="color: #cccc; text-decoration: none;"
+       >Desenvolvido por Trindade Comunicação Visual</a></p>
       </footer>
   </main>
 
