--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link href="carousel.css" rel="stylesheet">
 </head>
 
-<body>
+<body >
 
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -72,9 +72,13 @@
   <hr>
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
-        <iframe class="p-3 m-3" src="img/Video centro X bus movel.mp4" width="760" height="315" frameborder="0"
+      <div class="col-lg-3">
+      </div>
+      <div class="col-lg-6">
+        <iframe class="p-3 m-3" src="img/Video centro X bus movel.mp4" width="560" height="315" frameborder="0"
           allow="autoplay; fullscreen; " allowfullscreen></iframe>
+      </div>
+      <div class="col-lg-3">
       </div>
     </div>
   </div>
@@ -83,23 +87,9 @@
   <hr>
 
   <main>
-    <div class="container">
-      <div class="carousel-caption text-end">
-        <h1 class="fonteCarrossel">Cursos Para todas as Faixa Etárias de idade </h1>
-      </div>
-    </div>
+   
 
-    </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-    </div>
+    
 
     <div class="container marketing">
       <div class="row">
@@ -255,7 +245,7 @@
       <!-- FOOTER -->
       <footer class="container">
         <p class="float-end"><a href="#">Voltar ao topo</a></p>
-        <p>&copy; 2022 Centro X bus móvel - <a href="https://wa.me/+5511998079811" class="whatsapp-button" onmouseover="this.style.color='#cccc'"  onMouseOut="this.style.color='#000'"target="_blank" style="color: #cccc; text-decoration: none;"
+        <p>&copy; 2022 Centro X bus móvel - <a href="https://wa.me/+5511998079811" class="whatsapp-button" onmouseover="this.style.color='#cccc'"  onMouseOut="this.style.color='#000'"target="_blank" style="color: #000; text-decoration: none;"
        >Desenvolvido por Trindade Comunicação Visual</a></p>
       </footer>
   </main>
